# abhimart

./: .gitignore  .mcp.json  AGENTS.md  INTERVIEW_PREP.md  LICENSE  README.md  skills-lock.json
backend/: .env.example  alembic.ini  langgraph.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 705072c00835_create_products_table.py  9495bdfe78c0_create_refund_requests_table.py  dc79648096fc_create_users_and_orders_tables.py
backend/app/: __init__.py  config.py  database.py  exceptions.py  main.py  observability.py  observability_metrics.py  seed.py
backend/app/agents/customer_support/: graph.py  guardrails.py  policy.py  refund.py  tools.py
backend/app/api/: deps.py
backend/app/models/: __init__.py  base.py  order.py  product.py  refund_request.py  user.py
backend/app/rag/: ingest.py
backend/app/repositories/: product.py
backend/app/schemas/: product.py
backend/app/services/: __init__.py  order_preparation.py
backend/app/static/: chat.html
backend/app/tests/: conftest.py  test_order_preparation.py  test_products.py
backend/evals/: chat_api_hitl_probe.py  judge_results.py  langsmith_dataset.py  langsmith_run.py  policy_decision_probe.py  refund_hitl_probe.py  run_eval.py  run_policy_decision_eval.py  run_refund_hitl_eval.py  score_results.py
backend/evals/datasets/: policy_decision_golden.jsonl  stage4_golden.jsonl  stage5_guardrails.jsonl  stage7_order_preparation.jsonl
backend/evals/results/: policy_decision_baseline.jsonl  stage4_baseline.jsonl  stage4_judge_quality.jsonl  stage5_guardrails.jsonl
docs/: evaluation.md  (+17 more)
(+18 files in other folders)
