[project]
name = "abhimart-backend"
version = "0.1.0"
description = "AbhiMart — AI customer support agent backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langsmith>=0.8.3",
    "opentelemetry-api>=1.42.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.0",
    "opentelemetry-exporter-prometheus>=0.63b0",
    "opentelemetry-instrumentation-fastapi>=0.63b0",
    "opentelemetry-sdk>=1.42.0",
    "prometheus-client>=0.25.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
